# USB-2-232-KBD

./: LICENSE  README.md
DEBUGBUILD/: readme.md  usb-2-232-kbd.uf2
fimware/: CMakeLists.txt  default_config.h  notes.txt  tusb_config.h  usb-2-232-kbd.c
fimware/include/: core_1.c  core_1.h  ctypes.h  din_lookups.h  hid_app.c  hid_app.h  hid_con.c  hid_con.h  ps2dev.c  ps2dev.h  serial.c  serial.h  utils.c  utils.h
hw/Gerber/: README.md
hw/Gerber/JLCPCB/: USB-2-232-AT-BOM.xls  USB-2-232-AT-CPL.csv  USB-2-232-KBD-BOM.xls  USB-2-232-KBD-CPL.csv
hw/KiCad Project Files/: USB-2-232-KBD-cache.lib  USB-2-232-KBD.kicad_pcb  USB-2-232-KBD.kicad_prl  USB-2-232-KBD.kicad_pro  USB-2-232-KBD.kicad_sch  USB-2-232-KBD.round-tracks-config  fp-info-cache  fp-lib-table  sym-lib-table
hw/KiCad Project Files/USB-2-232-KBD_Footprints.pretty/: AT_Keyboard_pin.kicad_mod  CH340N.kicad_mod  C_0402_1005Metric.kicad_mod  C_0402_1005Metric_ref-flip.kicad_mod  C_0603_1608Metric.kicad_mod  C_0805_2012Metric.kicad_mod  C_1206_3216Metric.kicad_mod  C_1206_3216MetricFlip.kicad_mod  DIN-PS2-COMBO.kicad_mod  DSUB-9_Female_Horizontal_P2.77x2.84mm_EdgePinOffset7.70mm_Housed_MountingHolesOffset9.12mm.kicad_mod  FB_0805_2012Metric.kicad_mod  JLCPCB mounting hole.kicad_mod  LED_0805_KB.kicad_mod  LED_0805_MOUSE.kicad_mod  LED_0805_PWR.kicad_mod  MIDI_DIN-5.kicad_mod  PinHeader_ALT_PWR_IN.kicad_mod  PinHeader_ALT_SERIAL_OUT.kicad_mod  PinHeader_ALT_SERIAL_OUT_V2.kicad_mod  PinHeader_ALT_USB_IN.kicad_mod  PinHeader_PWR_FROM_AT.kicad_mod  PinHeader_UART0.kicad_mod  PolyFuse_0603.kicad_mod  PolyFuse_1206.kicad_mod  RPi_Pico_SMD_THv2.kicad_mod  R_0201_0603Metric.kicad_mod  R_0402.kicad_mod  R_0402_LEDS.kicad_mod  R_0603_1608Metric.kicad_mod  R_0805_2012Metric.kicad_mod  R_1206_3216Metric.kicad_mod  R_1206_3216Metric_LED.kicad_mod  R_1206_3216Metric_bridge.kicad_mod  R_1206_3216Metric_bridgeflip.kicad_mod  SOT-23-3.kicad_mod  SOT-23-6.kicad_mod  SW_DIP_SPSTx06_Slide_9.78x17.42mm_W7.62mm_P2.54mm.kicad_mod  SW_PUSH_6mm.kicad_mod  SW_SPST_TL3342.kicad_mod  SolderJumper_MAX232_5v-3v3_switch.kicad_mod  (+9 more)
hw/KiCad Project Files/USB-2-232-KBD_Footprints.pretty/3d/: ImageToStl.com_usb-mini-b-5.wrl  ImageToStl.com_usb-mini-b-6.wrl  PS2-port.wrl  SMD DIP SWITCH 6P.step  USB-Mini-B-2.stl  USB-Mini-B-6.stl
